[package]
name = "Smart-Order-Router"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }     
futures = "0.3"                                       
serde = { version = "1.0", features = ["derive"] }    
serde_json = "1.0"                                    
reqwest = { version = "0.11", features = ["json", "rustls-tls"] } 
tokio-tungstenite = "0.20"                           
tungstenite = "0.21"                                  
async-trait = "0.1.80"                               
anyhow = "1.0"                                       
log = "0.4"                                          
env_logger = "0.11"                                  
dashmap = "5.5"    
httpmock = "0.6"