[package]
name = "BlockFinders"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tokio = { version = "1.38.1", features = ["full"] }
futures-util = "0.3"
async-trait = "0.1.70"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0.191", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dotenv = "0.15.0"
url = "2.3"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
serde_urlencoded = "0.7"
hex = "0.4"